# mqtt-wx-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  codecov.yml  config.example.yaml  test.sh
.github/workflows/: ci.yaml  clippy.yaml
hack/: arch-config.sh
src/: config.rs  main.rs  meteorological.rs  mqtt_client.rs  sanity.rs  types.rs  units.rs
