[package]
name = "mqtt-wx"
version = "0.1.0"
edition = "2024"

[dependencies]
configulator-rs = "=0.1.3"
clap = "=4.6.1"
env_logger = "=0.11.10"
log = "=0.4.29"
serde = { version = "=1.0.221", features = ["derive"] }
serde_yaml_ng = "=0.10.0"

[build-dependencies]

[dev-dependencies]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
