[package]
name = "mqtt-wx"
version = "0.1.0"
edition = "2024"

[dependencies]
configulator-rs = "=0.1.3"
clap = "=4.6.2"
env_logger = "=0.11.11"
log = "=0.4.33"
rumqttc = "=0.25.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_yaml_ng = "=0.10.0"
tokio = { version = "=1.52.4", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }

[build-dependencies]

[dev-dependencies]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
